# abfrag

./: .gitignore  Cargo.toml  LICENSE  README.md  install  irreg-bak.csv  irreg.csv  irreg.json
migrations/: 0001_tables.sql
src/: error.rs  handlers.rs  main.rs  prompt.rs  types.rs  utils.rs
