[package]
name = "abfrag"
authors = ["Miska Tammenpää <miska@tammenpaa.com>"]
version = "0.1.0"
edition = "2021"
license = "GPLv3"
description = "Conjugate, translate and learn german words"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
clap = { version = "4.5.17", features = ["derive"] }
csv = "1.3.0"
flate2 = "1.0.33"
inquire = "0.7.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
